fixed the tags to use the hours over coolness
swapped to help so that people can see what it looks like and then I can change it back when they relize it looks bad.

--- a/sites/all/themes/lapcat/less/compiled.css
+++ b/sites/all/themes/lapcat/less/compiled.css
@@ -91,7 +91,7 @@ form #user-login-form{margin:1em;}
 .socialMediaContainer{position:absolute;top:120px;left:3px;}
 .facebook,.twitter,.googleplus,.youtube{padding:0;}.facebook a,.twitter a,.googleplus a,.youtube a{line-height:16px;display:block;-webkit-transition:all 500ms linear;-moz-transition:all 500ms linear;-ms-transition:all 500ms linear;-o-transition:all 500ms linear;transition:all 500ms linear;transform-origin:8px 16px;-webkit-transform-origin:8px 16px;z-index:50;}
 .articleItem{position:relative;width:100%;padding:3px;margin-bottom:10px;min-height:150px;}
-.field-content a[property*="label"]{padding:2px;margin:2px;border-radius:3px;-webkit-border-radius:3px;border:1px solid #e7f2e6;-webkit-transition:all 500ms linear;-moz-transition:all 500ms linear;-ms-transition:all 500ms linear;-o-transition:all 500ms linear;transition:all 500ms linear;}.field-content a[property*="label"]:hover{background:#e7f2e6;}
+.field-content a[property*="label"]{padding:3px;margin:10px 15px 0 0;border-radius:3px;-webkit-border-radius:3px;-webkit-box-shadow:inset 0 0 1px 1px rgba(36, 36, 36, 0.3);box-shadow:inset 0 0 1px 1px rgba(36, 36, 36, 0.3);position:relative;background:#f1f1f1;}.field-content a[property*="label"]:after{content:"";position:absolute;background:#556644;height:100%;width:10px;top:0;right:-0.7em;box-shadow:4px 0 2px -2px rgba(36, 36, 36, 0.3);-moz-box-shadow:4px 0 2px -2px rgba(36, 36, 36, 0.3);-webkit-box-shadow:4px 0 2px -2px rgba(36, 36, 36, 0.3);}
 .articleItem:hover .socialLinks{opacity:.95;}
 .user-picture img{height:40px;width:40px;}
 .articleBox,.articleContainerBox,.containerBox,.bookBox{position:relative;background:#FFF;min-height:100px;}
@@ -100,7 +100,7 @@ form #user-login-form{margin:1em;}
 .articleEntryTitle a{color:#556644;}
 .articleEntryTitle a:hover{text-decoration:none;}
 .articleEntryAuthor{font-size:10px;color:#1d1d1d;}.articleEntryAuthor img{height:24px;width:24px;}
-.articleEntryDescription{width:600px;overflow:hidden;}
+.articleEntryDescription{width:600px;overflow:hidden;margin-bottom:10px;}
 .topNav{width:940px;}
 .logoImage{height:75px;width:68px;}
 .secondNav{font-weight:bold;font-size:1.2em;position:relative;height:1.4em;}
